--- a/index.css
+++ b/index.css
@@ -71,6 +71,12 @@ a:visited {
 .main-grid-href > h1 {
 	display: flex;
 	justify-content: center;
+	border-bottom: 2px solid black;
+	padding: 5px;
+}
+
+.main-grid-href > p {
+	padding: 5px;
 }
 
 .main-grid-div > h1 {
